<resources>
    <string name="app_name">PoeBrowser</string>
    <string name="channel_name">poe_item_notifications</string>
    <string name="channel_description">This is the notification channel with which we use to emit detected POE Items</string>
    <string name="add_filter">Add Filter</string>
    <string name="navigation">Navigation</string>
    <string name="initial_text">Please wait while we fetch items</string>
    <string name="filter_json">Filter Json</string>
    <string name="button">Submit</string>
    <string name="list_items">List Items</string>
    <string name="save">Save</string>
    <string name="raw_filter_json">Raw Filter Json</string>
    <string name="league">League</string>
    <string name="filter_name">filter name</string>
    <string name="name">Name</string>
    <string name="add_more_explicit_mods">Add More Explicit Mods</string>
    <string name="filter_regex">filter_regex</string>
    <string name="remove">Remove</string>
    <string name="remove_button">remove_button</string>
    <string name="list_filters">List Filters</string>
    <string name="league_name_label">League:</string>
    <string name="item_name_label">Item Name:</string>
    <string name="filter_name_label">Filter Name:</string>
    <string name="explicit_mod_row_label">Explicit Mods</string>
    <string name="fetch_items_button_label">Fetch</string>
    <string name="item_name">Item Name</string>
    <string name="implicit_mods_label">Implicit Mods:</string>
    <string name="explicit_mods_label">Explicit Mods:</string>
    <string name="utility_mods_label">Utility Mods:</string>
    <string name="enchant_mods_label">Enchant Mods</string>
    <string name="note_label">Note:</string>
    <string name="seller_label">Seller:</string>
    <string name="delete_filter_button_label">delete</string>
    <string name="filter_explicit_mods_placeholder">Filter Explicit Mods</string>
</resources>
