<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="1200dp"
                    android:orientation="vertical"
                    >
                        <EditText
                            android:id="@+id/filter_name"
                            android:layout_width="400dp"
                            android:layout_height="40dp"
                            android:inputType="text"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/filter_name"
                            style="@style/Widget.AppCompat.EditText"
                            />
                        <EditText
                            android:id="@+id/league"
                            android:layout_width="400dp"
                            android:layout_height="40dp"
                            android:inputType="text"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/league"
                            style="@style/Widget.AppCompat.EditText"
                            />
                        <EditText
                            android:id="@+id/name"
                            android:layout_width="400dp"
                            android:layout_height="40dp"
                            android:inputType="text"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/name"
                            style="@style/Widget.AppCompat.EditText"
                            />

                        <fragment android:name="com.example.benja.poebrowser.ExplicitModsFilterContainerFragment"
                            android:id="@+id/explicit_mods_container"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            />
                        <!--<LinearLayout-->
                            <!--android:id="@+id/explicit_mods_container"-->
                            <!--android:layout_marginStart="20dp"-->
                            <!--android:layout_marginLeft="20dp"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--&gt;-->
                                <!--<LinearLayout-->
                                    <!--android:id="@+id/explicit_mods_fields_container"-->
                                    <!--android:layout_height="wrap_content"-->
                                    <!--android:layout_width="wrap_content"-->
                                    <!--android:orientation="vertical"-->
                                    <!--/>-->
                                <!--<Button-->
                                    <!--android:text="@string/add_more_explicit_mods"-->
                                    <!--android:layout_width="wrap_content"-->
                                    <!--android:layout_height="wrap_content"-->
                                    <!--/>-->
                        <!--</LinearLayout>-->
                        <Button
                            android:id="@+id/save_filter_button"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/save" />
                </LinearLayout>
        </ScrollView>

</LinearLayout>